feat: add Java config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "code-runner.executorMap": {
         "c": "make run input=src/$fileName",
-        "cpp": "make run input=src/$fileName"
+        "cpp": "make run input=src/$fileName",
+        "java": "javac src/structs/*.java; java -cp src src/$fileName"
     },
     "go.toolsEnvVars": {
         "CGO_ENABLED": 0
