feat: add Rust config

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ __pycache__
 .bundle
 vendor/bundle
 Gemfile.lock
+
+#Added by cargo
+#
+#already existing elements are commented out
+
+/target
+**/*.rs.bk
+Cargo.lock
