--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "editor.formatOnSave": true,
     "code-runner.executorMap": {
         "c": "make run input=src/$fileName",
         "cpp": "make run input=src/$fileName",
@@ -77,5 +78,36 @@
         "unordered_map": "cpp",
         "memory_resource": "cpp"
     },
-    "editor.formatOnSave": true
+    "clang-tidy.fixOnSave": true,
+    "clang-tidy.compilerArgs": ["-std=c++17"],
+    "clang-tidy.checks": [
+        "-*",
+        "abseil-*",
+        "bugprone-*",
+        "-bugprone-exception-escape",
+        "-bugprone-infinite-loop",
+        "boost-*",
+        "cert-*",
+        "cppcoreguidelines-*",
+        "google-default-arguments",
+        "google-explicit-constructor",
+        "google-runtime-operator",
+        "hicpp-exception-baseclass",
+        "hicpp-multiway-paths-covered",
+        "hicpp-signed-bitwise",
+        "misc-misplaced-const",
+        "misc-new-delete-overloads",
+        "misc-non-copyable-objects",
+        "misc-redundant-expression",
+        "misc-static-assert",
+        "misc-throw-by-value-catch-by-reference",
+        "misc-unconventional-assign-operator",
+        "misc-uniqueptr-reset-release",
+        "modernize-*",
+        "mpi-*",
+        "performance-*",
+        "portability-*",
+        "readability-*",
+        "-readability-convert-member-functions-to-static"
+    ]
 }
